[project]
name = "ComfyUI_mittimiLoadPreset"
description = "The system selects and loads preset."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = ["torch==2.1.1+cu121"]

[project.urls]
Repository = "https://github.com/mittimi/ComfyUI_mittimiLoadPreset"
#  Used by Comfy Registry https://comfyregistry.org

[tool.comfy]
PublisherId = "TOKEN_BY_GITHUB"
DisplayName = "ComfyUI_mittimiLoadPreset"
Icon = ""
