[project]
name = "comfyui-mittimi-load-preset"
description = "The system selects and loads preset."
version = "1.0.0"
license = {file = "LICENSE"}
dependencies = []

[project.urls]
Repository = "https://github.com/mittimi/ComfyUI_mittimiLoadPreset"

[tool.comfy]
PublisherId = "mittimi"
DisplayName = "ComfyUI_mittimiLoadPreset"
Icon = ""
