[project]
name = "comfyui_mittimi_load_preset"
description = "This node can easily switch between models and prompts by saving presets."
version = "1.0.0"
license = "LICENSE"

[project.urls]
Repository = "https://github.com/mittimi/ComfyUI_mittimiLoadPreset"

[tool.comfy]
PublisherId = "mittimi"
DisplayName = "ComfyUI_mittimiLoadPreset"
Icon = ""
